# kinfit

./: .gitignore  CMakeLists.txt  KinConstraint.h  KinConstraint_3C.h  KinConstraint_EnergyMomentum.h  KinConstraint_InvMass.h  KinConstraint_MissAndInvMass.h  KinConstraint_MissingMass.h  KinCovariance.h  KinFitTest.h  KinFitter.h  KinMomentumCorrections.h  KinParticle.h  LinkDef.h  Makefile  README.md  compile.sh  test.C  test.h  test_3C.C  test_3C_hipo_truth_matching.C  test_4C.C  test_4C_hipo.C  test_InvMass.C  test_InvMass_hipo_Rec.C  test_InvMass_hipo_truth_matching.C  test_MissAndInv.C  test_MissingParticle - Copy.C  test_MissingParticle.C
covMatrix_extraction/: Makefile  apply_min_events_cut.C  covMat_subScript  covMatrix_plots.C  covMatrix_plots_read_ttree.C  covMatrix_plots_save_all.C  covMatrix_single_particle.C  kinematics_plots.C  swif2_gemc_jobs.sh  swif2_recon_jobs.sh
covMatrix_extraction/gcards/: clas12-default_pim_sec2.gcard  clas12-default_pip_sec2.gcard
covMatrix_extraction/plots/: README
documentation/: DC_covariance_kinfitter_documentation.aux  DC_covariance_kinfitter_documentation.docx  DC_covariance_kinfitter_documentation.out  DC_covariance_kinfitter_documentation.tex
